--- a/src/globals.css
+++ b/src/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss"; 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; 
 
 
 
@@ -29,3 +29,4 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+*/
