--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,13 @@
-@import "tailwindcss"; 
+@import "tailwindcss";
+
+@layer utilities {
+  input:-webkit-autofill {
+    background-color: transparent !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+  }
+}
+
+
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; 
